--- a/Homework 2/makefile
+++ b/Homework 2/makefile
@@ -2,12 +2,13 @@
 BIN = parser
 CC = g++
 
+FLES = syntaxTree.c
 SRCS = $(BIN).y  $(BIN).l
 HDRS = scanType.h syntaxTree.h
 OBJS = lex.yy.o $(BIN).tab.o 
 
 $(BIN) : $(OBJS)
-	$(CC) $(OBJS) -o c-
+	$(CC) $(OBJS) $(FLES) -o c-
 
 lex.yy.c : $(BIN).l $(BIN).tab.h $(HDRS)
 	flex $(BIN).l 
@@ -19,4 +20,4 @@ clean :
 	rm -f *~$(OBJS) $(BIN) lex.yy.c $(BIN).tab.h $(BIN).tab.c $(BIN).output
 
 tar:
-	tar -cvf $(BIN).tar $(HDRS) $(SRCS) makefile
+	tar -cvf $(BIN).tar $(HDRS) $(SRCS) $(FLES) makefile
